          JVC Alneo XA-HD500
	  various Samsung devices
     
Canon:
   * 5D - 20D experimental capture support

Disk port:
   * fix a crasher

Bindings:
   * Mono/.NET bindings are installed if Mono is found
   * Partial Java bindings

libgphoto2 API:
   * Compiles with -pedantic in gcc's c99 and c++98 modes.
   * Marked a few definitions as being internal to the gphoto project.

libgphoto2:
   * Improved error checking and propagation.
   * New error code for "fixed limit exceeded" (exceptions would be nice)

----------------------------------------------------------------------------

libgphoto2 2.2.1

   * Fix build for FreeBSD users (and other non-Linux)

----------------------------------------------------------------------------

libgphoto2 2.2.0


Build system (packagers beware!):

   * You should generate HAL FDI, linux-hotplug usb.usermap, and udev rules
     now via our program:

 	  ${libdir}/print-camera-list (hal-fdi|usb-usermap|udev-rules)

     During a chrooted build you can use:
	CAMLIBS=$BUILDROOT/usr/lib/libgphoto2/2.2/ print-camera-list hal-fdi

     This obsoletes print-usb-usermap and print-udev-rules.

     The hal FDI file should be put into:
	/usr/share/hal/fdi/information/10freedesktop/10-camera-libgphoto2.fdi

     If you need to generate different stuff based on the cameras, please add
     it to the "print-camera-list" helper.

   * Added C# (csharp) bindings

     Thanks to Patrick van Staveren <trick@vanstaveren.us>'s initiative,
     we now compile, ship and install the C# bindings. However, a few
     things will still change about it, so don't just completely rely on
     it, its file names and locations, etc. just yet.


Client programmers (KDE, GNOME, MONO, C....) with specific character
set requirements:

   * We added new function gp_message_codeset(const char*) to API.
      - If you do not call this function, libgphoto2 will give you its
        messages in the codeset defined by the system locale.